Corrected UI Issues

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <div class="counter-container">
        <h1>Count:</h1>
        <h2 id="count-el">0</h2>
-       <button id="increment-btn">INCREMENT</button> 
-       <button id="decrement-btn" disabled>DECREASE</button>
-       <button id="save-btn" >SAVE</button>
-       <button id="clearAll-btn">CLEAR ALL</button>
+       <div class="button-container">
+        <button id="increment-btn">INCREMENT</button> 
+        <button id="decrement-btn" disabled>DECREASE</button>
+        <button id="save-btn" >SAVE</button>
+        <button id="clearAll-btn">CLEAR ALL</button>
+       </div>
        <p>Previous Entries: </p>
        <div class="save-container">
             <p id="save-el"></p>
